// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser foreach loops allows 'next' to terminate loop 1`] = `
Array [
  ForEach {
    "body": Block {
      "loc": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [],
      "type": "Block",
    },
    "item": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "loc": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "word",
    },
    "target": Variable {
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "lipsum",
      },
      "type": "Variable",
    },
    "tokens": Object {
      "endFor": Object {
        "isReserved": true,
        "kind": "Next",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "next",
      },
      "forEach": Object {
        "isReserved": false,
        "kind": "ForEach",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "for each",
      },
      "in": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "in",
      },
    },
    "type": "ForEach",
  },
]
`;

exports[`parser foreach loops requires a name and target 1`] = `
Array [
  ForEach {
    "body": Block {
      "loc": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "statements": Array [],
      "type": "Block",
    },
    "item": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "loc": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "word",
    },
    "target": Variable {
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "lipsum",
      },
      "type": "Variable",
    },
    "tokens": Object {
      "endFor": Object {
        "isReserved": false,
        "kind": "EndFor",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end for",
      },
      "forEach": Object {
        "isReserved": false,
        "kind": "ForEach",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "for each",
      },
      "in": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "loc": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "in",
      },
    },
    "type": "ForEach",
  },
]
`;
